--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -94,10 +94,12 @@
             </li>
         </ul>
         <div class="nav-wrapper nav-panels">
-            <a href="#" data-activates="slide-out" class="nav-panel-menu button-collapse"><i class="material-icons">menu</i></a>
-            <div class="left action">
-                {% block title %}
-                {% endblock %}
+            <div class="nav-panel-top">
+                <a href="#" data-activates="slide-out" class="nav-panel-menu button-collapse"><i class="material-icons">menu</i></a>
+                <h1 class="left action">
+                    {% block title %}
+                    {% endblock %}
+                </h1>
             </div>
             <ul class="input-field nav-panel-buttom">
                 <li class="bold">
