--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -95,7 +95,7 @@
         </ul>
         <div class="nav-wrapper nav-panels">
             <div class="nav-panel-top">
-                <a href="#" data-activates="slide-out" class="nav-panel-menu button-collapse"><i class="material-icons">menu</i></a>
+                <button data-activates="slide-out" class="nav-panel-menu button-collapse"><i class="material-icons">menu</i></button>
                 <h1 class="left action">
                     {% block title %}
                     {% endblock %}
