--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/Card/_content.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/Card/_content.html.twig
@@ -3,7 +3,7 @@
         <i class="grey-text text-darken-4 activator material-icons right">more_vert</i>
     {% endif %}
     <a href="{{ path('view', { 'id': entry.id }) }}" title="{{ entry.title| striptags | e('html_attr') }}" class="card-title dot-ellipsis dot-resize-update">
-        {{ entry.title | striptags | truncate(80, true, '…') | raw | default('config.form_rules.faq.variable_description.title'|trans) }}
+        {{ entry.title | striptags | truncate(80, true, '…') | raw | default('entry.default_title'|trans) }}
     </a>
 
     <div class="{{ subClass|default('original grey-text') }}">
