Replaced Create new client link with a button

--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Developer/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Developer/index.html.twig
@@ -20,7 +20,7 @@
 
                 <h4>{{ 'developer.clients.title'|trans }}</h4>
                 <ul>
-                    <li><a href="{{ path('developer_create_client') }}">{{ 'developer.clients.create_new'|trans }}</a></li>
+                    <li><a href="{{ path('developer_create_client') }}" class="waves-effect waves-light btn">{{ 'developer.clients.create_new'|trans }}</a></li>
                 </ul>
 
                 <h4>{{ 'developer.existing_clients.title'|trans }}</h4>
