--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
@@ -9,7 +9,7 @@
         <div class="determinate"></div>
     </div>
     <nav class="hide-on-large-only">
-        <div class="nav-wrapper cyan darken-1">
+        <div class="nav-panel-item cyan darken-1">
             <ul>
                 <li>
                     <a href="#" data-activates="slide-out" class="button-collapse">
