Add specific styles for the card tag form element.
Also add a `.hidden` class in the baggy theme to have consistency with material.

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -180,6 +180,17 @@ a.original:not(.waves-effect) {
   flex-grow: 1;
 }
 
+.card-tag-form {
+  display: flex;
+  min-width: 100px;
+  flex-grow: 1;
+}
+
+.card-tag-form input {
+  margin-bottom: 0;
+  height: 2rem;
+}
+
 .card-tag-rss {
   display: flex;
 }
