change href link for manifest.json

--- a/src/Wallabag/CoreBundle/Resources/views/base.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/base.html.twig
@@ -38,7 +38,7 @@
 
             <link rel="shortcut icon" type="image/x-icon" href="{{ asset('wallassets/themes/_global/img/appicon/favicon.ico') }}">
 
-            <link rel="manifest" href="/manifest.json">
+            <link rel="manifest" href="{{ asset('manifest.json') }}">
 
             {% block css %}
             {% endblock %}
