--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -29,7 +29,7 @@
             {% block logo %}
                 <li class="logo border-bottom">
                     <a title="{{ 'menu.left.back_to_unread'|trans }}" href="{{ path('unread') }}">
-                        <img src="{{ asset('wallassets/themes/_global/img/logo-square.png') }}" alt="wallabag logo" />
+                        <img src="{{ asset('wallassets/themes/_global/img/logo-square.svg') }}" alt="wallabag logo" />
                     </a>
                 </li>
             {% endblock %}
