--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_card_no_preview.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_card_no_preview.html.twig
@@ -1,5 +1,12 @@
 <div class="card">
     <div class="card-body">
+        <div class="card-image waves-effect waves-block waves-light">
+            <ul class="card-entry-labels">
+            {% for tag in entry.tags | slice(0, 3) %}
+                <li><a href="{{ path('tag_entries', {'slug': tag.slug}) }}">{{ tag.label }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
         {% include "@WallabagCore/themes/material/Entry/Card/_content.html.twig" with {'entry': entry} only %}
     </div>
 
