--- a/src/Wallabag/UserBundle/Resources/views/layout.html.twig
+++ b/src/Wallabag/UserBundle/Resources/views/layout.html.twig
@@ -16,8 +16,8 @@
             {% endblock fos_user_content %}
         </div>
         <div class="center">
-            <a href="{{ path('changeLocale', {'language': 'de'}) }}">Deutsch</a>
-            <a href="{{ path('changeLocale', {'language': 'en'}) }}">English</a>
+            <a href="{{ path('changeLocale', {'language': 'de'}) }}">Deutsch</a> –
+            <a href="{{ path('changeLocale', {'language': 'en'}) }}">English</a> –
             <a href="{{ path('changeLocale', {'language': 'fr'}) }}">Français</a>
         </div>
     </div>
