Add placeholder image to card-based gallery entries page for #3651
I referenced https://css-tricks.com/using-svg/ for using the SVG icon.
The icon has a black foreground and white background, which doesn't
look very good as a placeholder. So, using the background-image style
to show the svg and the inversion filter to make it white on gray.

With the image always present, there isn't much difference between
the with and without image preview templates, so I merged them.

Tested on Chrome, Firefox, and Safari on OSX.

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -123,6 +123,12 @@ main {
     display: block;
   }
 
+  .card-image .placeholder {
+    background-color: #111;
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+  }
+
   &.sw {
     max-width: 370px;
     margin-left: auto;
