Default card background and logo colors changed

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -124,7 +124,9 @@ main {
     display: block;
 
     &--default {
+      background-color: #181818;
       background-size: contain;
+      filter: invert(100);
     }
   }
 
