Update icon to `casino`

--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -118,7 +118,7 @@
                     {% if activeRoute %}
                     <li id="button_random">
                         <a class="waves-effect tooltipped js-random-action" data-position="bottom" data-delay="50" data-tooltip="{{ 'menu.top.random_entry'|trans }}" href="{{ path('random_entry', { 'type': activeRoute }) }}">
-                            <i class="material-icons">shuffle</i>
+                            <i class="material-icons">casino</i>
                         </a>
                     </li>
                     {% endif %}
