material: fix left padding of content on medium screens
Fixes #3877

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -12,9 +12,15 @@
   .pagination {
     margin-left: auto;
   }
-  
+
   .card-tag-labels li {
     max-width: 50%;
+  }
+}
+
+@media screen and (min-width: 993px) {
+  main #content {
+    padding-left: 70px;
   }
 }
 
