material: wrap card actions, remove class hiding of creation date
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -102,6 +102,11 @@ main {
       display: inline-flex;
       vertical-align: middle;
 
+      .card-reading-time,
+      .card-created-at {
+        display: inline-flex;
+      }
+
       span {
         margin-right: 5px;
       }
