material: add media queries to hide creation date from card actions
Hide the creation date from card actions on specific sizes when there's
not enough space for all parts.

Fixes #3851

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -174,3 +174,12 @@
     padding: 0;
   }
 }
+
+@media screen and (max-width: 310px),
+  screen and (min-width: 601px) and (max-width: 660px),
+  screen and (min-width: 993px) and (max-width: 1050px),
+  screen and (min-width: 1201px) and (max-width: 1250px) {
+  .card .card-action .reading-time .card-created-at {
+    display: none;
+  }
+}
